# tp_eng_software

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: ci.yml
docker/: docker-compose.yml  dockerfile
src/: __init__.py  server.py
src/config/: __init__.py  environment.py
src/controllers/: __init__.py  person.py  task.py
src/database/: __init__.py  database.py
src/models/: __init__.py  person.py  responses.py  task.py
src/repositories/: __init__.py  person.py  task.py
src/routes/: __init__.py  oauth.py  person.py  tasks.py
src/services/: __init__.py  auth.py  person.py  task.py  tasks.py
tests/: __init__.py
tests/integration/: __init__.py
tests/integration/person/: __init__.py  create_person_integration_test.py
tests/integration/task/: __init__.py  create_task_integration_test.py
tests/person/: __init__.py  create_person_test.py  delete_person_test.py  update_person_test.py
tests/task/: create_task_test.py  delete_task_test.py  get_all_tasks_test.py  update_person_test.py  update_task_test.py  vinculate_task_test.py
tests/unit/: __init__.py
tests/unit/person/: create_person_test.py  delete_person_test.py
tests/unit/task/: __init__.py  conclude_task_test.py  delete_task_test.py
