[tool.poetry]
name = "tp-eng-software"
version = "0.1.0"
description = ""
authors = ["Pedro Freitas <freitaas.pedro@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13, <3.14"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
slowapi = "^0.1.9"
envparse = "^0.2.0"
sqlalchemy = "^2.0.36"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.19"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
